fixing header buttons spacing

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -416,6 +416,11 @@ iframe.fullframe {
 
 /* heroesScreen */
 .heroes {
+  .bar-header {
+    .right-buttons .button {
+      padding: 0 4px;
+    }
+  }
   .bar-footer {
   height: 80px;
     .button {
